spade-tests/src/snapshots/spade_tests__parser__method_with_partial_turbofish.snap
---
source: spade-tests/src/parser.rs
---
fn test() {
    a.field::
}


error: Expected $ or <
  ┌─ testinput:3:1
  │
2 │     a.field::
  │            -- :: after an method is used to specify type parameters
3 │ }
  │ ^ Expected $ or <
